added christmas list

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               </div>
               <div class="col-md-4">
                 <div class="work-box">
-                  <a href="Midterm/apex-1.0.0/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                  <a href="/tests/Midterm/apex-1.0.0/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                     <div class="work-img">
                       <img src="assets/img/portfolio-SolarView.png" alt="" class="img-fluid">
                     </div>
@@ -302,7 +302,24 @@
                     </div>
                   </div>
                 </div>
-            </div>
+                <div class="col-md-4">
+                  <div class="work-box">
+                    <a href="assets/img/portfolio-christmaslist.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                      <div class="work-img">
+                        <img src="assets/img/portfolio-christmaslist.png" alt="" class="img-fluid">
+                      </div>
+                    </a>
+                    <div class="work-content">
+                        <div class="col-sm-8">
+                          <h2 class="w-title"><a href="https://rellergert-00.github.io/react-final/">Christmas List (React)</a></h2>
+                          <div class="w-more">
+                            <span class="w-ctegory">Web Development</span> / <span class="w-date">12 Dec. 2023</span>
+                          </div>
+                        </div>
+                       </div>
+                      </div>
+                    </div>
+                  </div>
     </section>
 
     <!-- ======= Blog Section ======= -->
